fix z-index intro

--- a/src/client/components/intro/style.pcss
+++ b/src/client/components/intro/style.pcss
@@ -10,6 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: 10;
 
         &__video {
             background-color: #000;
